objects/GEMS_Prospective_ID_Card__c.object
<CustomObject>
    <fields>
        <fullName>Account_Setup_OSS_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Setup/OSS User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prospective_ID_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Owner__c</fullName>
        <label>Actual Owner</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicable_BAs__c</fullName>
        <label>Applicable BAs</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicable_GSs__c</fullName>
        <label>Applicable GSs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Agreement</fullName>
                </value>
                <value>
                    <fullName>Group Section</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <defaultValue>&apos;No&apos;</defaultValue>
        <description>Used to indicate if there are attachments on the id card</description>
        <inlineHelpText>Are there attachments?</inlineHelpText>
        <label>Attachment</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Card_Mailed_Date__c</fullName>
        <label>ID Card Mailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_Card_Mailed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ID Card Mailed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Card_Suppression_Date__c</fullName>
        <label>ID Card Suppression Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_ID_Card_Case_Number__c</fullName>
        <formula>Parent_ID_Card_Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent ID Card Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_ID_Card_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent ID Card Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Prospective ID Card Request</relationshipLabel>
        <relationshipName>GEMS_Prospective_ID_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospective_ID_Card_Approved_Date__c</fullName>
        <label>Prospective ID Card Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prospective_ID_Card_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prospective ID Card Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospective_ID_card_Requested_date__c</fullName>
        <label>Prospective ID Card Requested date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prospective_ID_sent_for_approval_date__c</fullName>
        <label>Prospective ID Sent for Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Removal_of_ID_Card_Suppression_Date__c</fullName>
        <label>Removal of ID Card Suppression Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Request for prospective ID</fullName>
                </value>
                <value>
                    <fullName>Prospective ID Card Completed</fullName>
                </value>
                <value>
                    <fullName>Removal of Suppression Completed</fullName>
                    <isActive>false</isActive>
                    <label>Removal of Suppression Completed</label>
                </value>
                <value>
                    <fullName>Request for Removal of Suppression</fullName>
                    <isActive>false</isActive>
                    <label>Request for Removal of Suppression</label>
                </value>
                <value>
                    <fullName>Request for Suppression</fullName>
                    <isActive>false</isActive>
                    <label>Request for Suppression</label>
                </value>
                <value>
                    <fullName>Suppression Completed</fullName>
                    <isActive>false</isActive>
                    <label>Suppression Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GEMS Prospective ID Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PID#{0000000}</displayFormat>
        <label>Prospective ID Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GEMS Prospective ID Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>